[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/GameWorld/Player/footstepdirt.tres" type="AudioStream" id=1]
[ext_resource path="res://src/GameWorld/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://src/GameWorld/MenuInterfaces/InventoryMenu/141334__lluiset7__error-2.wav" type="AudioStream" id=3]
[ext_resource path="res://src/GameWorld/Player/pickup.wav" type="AudioStream" id=4]

[sub_resource type="SpatialMaterial" id=1]
metallic = 0.46
roughness = 0.0

[sub_resource type="ArrayMesh" id=2]
surfaces/0 = {
"aabb": AABB( -1, -1, -1, 2, 2, 2 ),
"array_data": PoolByteArray( 147, 59, 147, 59, 255, 187, 0, 60, 43, 43, 145, 0, 201, 59, 194, 38, 147, 59, 147, 187, 255, 187, 0, 60, 43, 213, 145, 0, 201, 59, 201, 59, 147, 187, 147, 187, 0, 188, 0, 60, 213, 213, 145, 0, 194, 38, 201, 59, 147, 187, 147, 59, 0, 188, 0, 60, 213, 43, 145, 0, 194, 38, 194, 38, 147, 59, 147, 187, 0, 60, 0, 60, 43, 213, 111, 0, 201, 59, 201, 59, 147, 59, 147, 59, 0, 60, 0, 60, 43, 43, 111, 0, 201, 59, 194, 38, 147, 187, 147, 59, 255, 59, 0, 60, 213, 43, 111, 0, 194, 38, 194, 38, 147, 187, 147, 187, 255, 59, 0, 60, 213, 213, 111, 0, 194, 38, 201, 59, 0, 188, 147, 187, 147, 59, 0, 60, 145, 213, 43, 0, 194, 38, 201, 59, 0, 188, 147, 59, 147, 59, 0, 60, 145, 43, 43, 0, 194, 38, 194, 38, 255, 187, 147, 59, 147, 187, 0, 60, 145, 43, 213, 0, 201, 59, 194, 38, 255, 187, 147, 187, 147, 187, 0, 60, 145, 213, 213, 0, 201, 59, 201, 59, 147, 59, 0, 60, 147, 187, 0, 60, 43, 111, 213, 0, 201, 59, 194, 38, 147, 187, 0, 60, 147, 187, 0, 60, 213, 111, 213, 0, 194, 38, 194, 38, 147, 187, 0, 60, 147, 59, 0, 60, 213, 111, 43, 0, 194, 38, 201, 59, 147, 59, 0, 60, 147, 59, 0, 60, 43, 111, 43, 0, 201, 59, 201, 59, 0, 60, 147, 187, 147, 187, 0, 60, 111, 213, 213, 0, 201, 59, 201, 59, 0, 60, 147, 59, 147, 187, 0, 60, 111, 43, 213, 0, 201, 59, 194, 38, 255, 59, 147, 59, 147, 59, 0, 60, 111, 43, 43, 0, 194, 38, 194, 38, 0, 60, 147, 187, 147, 59, 0, 60, 111, 213, 43, 0, 194, 38, 201, 59, 147, 59, 147, 187, 255, 187, 0, 60, 43, 213, 145, 0, 201, 59, 0, 60, 0, 60, 147, 187, 147, 187, 0, 60, 111, 213, 213, 0, 0, 60, 27, 60, 147, 59, 0, 188, 147, 187, 0, 60, 43, 145, 213, 0, 201, 59, 27, 60, 147, 59, 0, 188, 147, 59, 0, 60, 43, 145, 43, 0, 201, 59, 201, 59, 0, 60, 147, 187, 147, 59, 0, 60, 111, 213, 43, 0, 0, 60, 201, 59, 147, 59, 147, 187, 0, 60, 0, 60, 43, 213, 111, 0, 201, 59, 0, 60, 147, 187, 0, 188, 147, 59, 0, 60, 213, 145, 43, 0, 194, 38, 201, 59, 147, 187, 147, 187, 255, 59, 0, 60, 213, 213, 111, 0, 194, 38, 255, 59, 0, 188, 147, 187, 147, 59, 0, 60, 145, 213, 43, 0, 0, 0, 201, 59, 255, 187, 147, 187, 147, 187, 0, 60, 145, 213, 213, 0, 0, 0, 194, 38, 147, 187, 147, 187, 0, 188, 0, 60, 213, 213, 145, 0, 194, 38, 0, 0, 147, 187, 0, 188, 147, 187, 0, 60, 213, 145, 213, 0, 194, 38, 194, 38, 0, 60, 147, 59, 147, 187, 0, 60, 111, 43, 213, 0, 0, 0, 194, 38, 147, 59, 147, 59, 255, 187, 0, 60, 43, 43, 145, 0, 194, 166, 0, 0, 147, 59, 0, 60, 147, 187, 0, 60, 43, 111, 213, 0, 194, 166, 194, 38, 147, 59, 0, 60, 147, 59, 0, 60, 43, 111, 43, 0, 201, 59, 0, 60, 147, 59, 147, 59, 0, 60, 0, 60, 43, 43, 111, 0, 201, 59, 27, 60, 255, 59, 147, 59, 147, 59, 0, 60, 111, 43, 43, 0, 255, 59, 27, 60, 0, 188, 147, 59, 147, 59, 0, 60, 145, 43, 43, 0, 0, 0, 201, 59, 147, 187, 147, 59, 255, 59, 0, 60, 213, 43, 111, 0, 194, 38, 255, 59, 147, 187, 147, 59, 0, 188, 0, 60, 213, 43, 145, 0, 194, 38, 0, 60, 255, 187, 147, 59, 147, 187, 0, 60, 145, 43, 213, 0, 0, 0, 27, 60, 147, 187, 0, 60, 147, 187, 0, 60, 213, 111, 213, 0, 194, 38, 27, 60, 0, 60, 147, 187, 147, 187, 0, 60, 111, 213, 213, 0, 0, 0, 194, 38, 0, 60, 147, 187, 147, 59, 0, 60, 111, 213, 43, 0, 0, 0, 201, 59, 147, 59, 0, 188, 147, 59, 0, 60, 43, 145, 43, 0, 194, 166, 201, 59, 147, 59, 0, 188, 147, 187, 0, 60, 43, 145, 213, 0, 194, 166, 194, 38, 147, 59, 147, 187, 255, 187, 0, 60, 43, 213, 145, 0, 201, 59, 0, 0, 147, 59, 0, 188, 147, 187, 0, 60, 43, 145, 213, 0, 201, 59, 194, 38, 0, 60, 147, 59, 147, 187, 0, 60, 111, 43, 213, 0, 0, 60, 194, 38, 0, 60, 147, 187, 147, 187, 0, 60, 111, 213, 213, 0, 0, 60, 201, 59, 255, 59, 147, 59, 147, 59, 0, 60, 111, 43, 43, 0, 0, 0, 194, 38, 147, 59, 147, 59, 0, 60, 0, 60, 43, 43, 111, 0, 194, 166, 194, 38, 147, 59, 147, 187, 0, 60, 0, 60, 43, 213, 111, 0, 194, 166, 201, 59, 147, 187, 0, 188, 147, 187, 0, 60, 213, 145, 213, 0, 201, 59, 0, 60, 147, 187, 0, 188, 147, 59, 0, 60, 213, 145, 43, 0, 194, 38, 0, 60, 0, 188, 147, 59, 147, 59, 0, 60, 145, 43, 43, 0, 0, 0, 194, 38, 0, 188, 147, 187, 147, 59, 0, 60, 145, 213, 43, 0, 0, 0, 201, 59, 255, 187, 147, 187, 147, 187, 0, 60, 145, 213, 213, 0, 0, 0, 201, 59, 255, 187, 147, 59, 147, 187, 0, 60, 145, 43, 213, 0, 0, 0, 194, 38, 255, 59, 147, 59, 147, 59, 0, 60, 111, 43, 43, 0, 255, 59, 201, 59, 0, 60, 147, 59, 147, 187, 0, 60, 111, 43, 213, 0, 0, 60, 194, 38, 147, 59, 147, 59, 255, 187, 0, 60, 43, 43, 145, 0, 201, 59, 0, 0, 147, 187, 147, 59, 0, 188, 0, 60, 213, 43, 145, 0, 194, 38, 0, 0, 147, 59, 147, 59, 0, 60, 0, 60, 43, 43, 111, 0, 201, 59, 0, 60 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 6, 0, 5, 0, 4, 0, 7, 0, 6, 0, 8, 0, 10, 0, 9, 0, 8, 0, 11, 0, 10, 0, 12, 0, 14, 0, 13, 0, 12, 0, 15, 0, 14, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 20, 0, 22, 0, 21, 0, 23, 0, 25, 0, 24, 0, 26, 0, 28, 0, 27, 0, 29, 0, 31, 0, 30, 0, 32, 0, 34, 0, 33, 0, 35, 0, 37, 0, 36, 0, 14, 0, 39, 0, 38, 0, 40, 0, 42, 0, 41, 0, 43, 0, 45, 0, 44, 0, 43, 0, 46, 0, 45, 0, 30, 0, 48, 0, 47, 0, 30, 0, 31, 0, 48, 0, 1, 0, 49, 0, 0, 0, 1, 0, 50, 0, 49, 0, 25, 0, 26, 0, 27, 0, 25, 0, 23, 0, 26, 0, 44, 0, 52, 0, 51, 0, 44, 0, 53, 0, 52, 0, 8, 0, 54, 0, 11, 0, 8, 0, 55, 0, 54, 0, 7, 0, 56, 0, 6, 0, 7, 0, 57, 0, 56, 0, 58, 0, 3, 0, 59, 0, 58, 0, 2, 0, 3, 0, 12, 0, 60, 0, 15, 0, 12, 0, 61, 0, 60, 0, 62, 0, 13, 0, 63, 0, 62, 0, 12, 0, 13, 0, 15, 0, 39, 0, 14, 0, 15, 0, 64, 0, 39, 0, 14, 0, 59, 0, 13, 0, 14, 0, 38, 0, 59, 0, 48, 0, 26, 0, 23, 0, 48, 0, 31, 0, 26, 0 ),
"blend_shape_data": [  ],
"format": 98067,
"index_count": 132,
"material": SubResource( 1 ),
"name": "Material",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 65
}

[sub_resource type="BoxShape" id=3]

[sub_resource type="SphereShape" id=4]
radius = 7.0

[sub_resource type="SphereShape" id=5]
radius = 4.0

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.8062, 3.77708, -0.465621 )
script = ExtResource( 2 )

[node name="cube" type="MeshInstance" parent="."]
_import_path = NodePath("cube-col")
transform = Transform( 0.95, 0, 0, 0, 0.95, 0, 0, 0, 0.95, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.95, 0, 0, 0, -4.15258e-08, -0.95, 0, 0.95, -4.15258e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.85165, 0 )

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 0.00880322, -0.305732, 0.952077, 0.00282677, 0.952118, 0.305719, -0.999957, -7.4509e-09, 0.00924594, 0.111354, 0.324667, 0.46511 )
fov = 74.0
near = 0.1

[node name="EchoRange7" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="EchoRange7"]
shape = SubResource( 4 )

[node name="WalkingEchoRange" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="WalkingEchoRange"]
shape = SubResource( 5 )

[node name="Footsteps" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 1 )

[node name="Pickup_old" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )

[node name="Pickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Compass" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.442, 0, 0 )

[node name="RejectPickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="area_entered" from="EchoRange7" to="." method="_on_EchoRange7_area_entered"]
[connection signal="area_exited" from="EchoRange7" to="." method="_on_EchoRange7_area_exited"]
[connection signal="area_entered" from="WalkingEchoRange" to="." method="_on_WalkingEchoRange_area_entered"]
[connection signal="area_exited" from="WalkingEchoRange" to="." method="_on_WalkingEchoRange_area_exited"]
